external-crates/move/crates/move-compiler/tests/development/typing/signed_int_negation.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_negation.move:4:16
  │
4 │         let a: i64 = 5i64;
  │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_negation.move:5:17
  │
5 │         let _b: i64 = -a;
  │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_negation.move:5:23
  │
5 │         let _b: i64 = -a;
  │                       ^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_negation.move:6:17
  │
6 │         let _c: i8 = -(1i8);
  │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_negation.move:6:22
  │
6 │         let _c: i8 = -(1i8);
  │                      ^^^^^^ Signed integer types are under development
